samples/compiler-tests/fail/cycle_type.ktr
// cycle_type.ktr -- Cyclic type alias error expected

type A = B
type B = A

agent main() -> A {
  42
}
